# odbcTester

./: Info.txt  README.md  main.py  main.spec  pyproject.toml  tester.py
