[tool.poetry]
name = "odbctester"
version = "1.0.0"
description = ""
authors = ["Nestor <nesdum12@yahoo.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pyodbc = "^4.0.35"
pyinstaller = "^5.8.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
